Etapa 2/Compilador minijava - etapa 2/bin/tests/tests sintácticos/invalidos/test21.java
/* Test21
 * @ Objetivo: Detectar que falta el identificador en la asignacion, el lado derecho.
 */
class clase
{
	static void metodo()
	{
		 = 5;
	}
	
}
